@@ -57,10 +57,7 @@ You must specify an alignment file (BAM or CRAM) for at least one sample.
                               " Ploidy should be provided in records using the FORMAT/CN field, which are interpreted to span the range [POS+1, INFO/END]. Any CN value besides 1 or 0 will be treated as 2."
                               " File must be tabix indexed. (no default)")
         group.add_option("--noCompress", type="string", dest="noCompressBed", metavar="FILE",
-                         help="Provide BED file of regions where gVCF block compress is disallowed. File must be bgzip-compressed/tabix-indexed. (no default)")
-        group.add_option("--targetRegions", type="string", dest="targetRegionsBed", metavar="FILE",
-                         help="Provide BED file of regions to allow variant calls. Calls outside these ares are filtered "
-                         "as OffTarget. File must be bgzip-compressed/tabix-indexed. (no default)")
+                         help="Provide BED file of regions where gVCF block compression is not allowed. File must be bgzip-compressed/tabix-indexed. (no default)")
         group.add_option("--callContinuousVf", type="string", dest="callContinuousVf", metavar="CHROM", action="append",
                          help="Call variants on CHROM without a ploidy prior assumption, issuing calls with continuous variant frequencies (no default)")
         group.add_option("--rna", dest="isRNA", action="store_true",
@@ -97,7 +94,6 @@ You must specify an alignment file (BAM or CRAM) for at least one sample.
 
         options.ploidyFilename = checkFixTabixIndexedFileOption(options.ploidyFilename,"ploidy file")
         options.noCompressBed = checkFixTabixIndexedFileOption(options.noCompressBed,"no-compress bed")
-        options.targetRegionsBed = checkFixTabixIndexedFileOption(options.targetRegionsBed,"targeted-regions bed")
 
 
     def validateOptionExistence(self,options) :
