@@ -1,3 +1,4 @@
+- STREL-443 Remove old germline caller target BED file option
 - STREL-178 replace codon phaser with variant phaser
 - STREL-356 Allow BED file to restrict variant calling regions
 - STREL-392 Fix overlap del handling across segments
